--- a/filmography.html
+++ b/filmography.html
@@ -15,17 +15,11 @@
 
 <body class="homepage is-preload">
   <div id="page-wrapper">
-
     <!-- Header -->
     <section id="header">
 
-
-      <!-- Logo -->
-      <!-- <h1 id="logo"><a href="index.html">Strongly Typed</a></h1>
-							<p>A responsive HTML5 site template. Manufactured by HTML5 UP.</p> -->
-
       <!-- Nav -->
-      <nav id="nav">
+      <nav id="nav" style = "position: fixed;">
         <ul>
           <li><a class="" href="index.html"><span>Home</span></a></li>
           <li><a class="" href="showcase.html"><span>Showcase</span></a></li>
@@ -36,22 +30,9 @@
           <li><a class="" href="gallery.html"><span>Gallery</span></a></li>
         </ul>
       </nav>
-
-
     </section>
 
-    <!-- Features -->
-
-
-    <!-- Banner -->
-    <section id="banner">
-      <div class="container">
-        <img class='image featured long' src='images/hlyp-4-5.png'>
-      </div>
-    </section>
-
-
-
+    <img class='image featured long' src='images/hlyp-4-5.png'>
   </div>
 
   <!-- Scripts -->
