--- a/print.html
+++ b/print.html
@@ -15,10 +15,11 @@
 
 <body class="homepage is-preload">
   <div id="page-wrapper">
+
     <!-- Header -->
     <section id="header">
       <!-- Nav -->
-      <nav id="nav">
+      <nav id="nav" style="position: fixed;">
         <ul>
           <li><a class="" href="index.html"><span>Home</span></a></li>
           <li><a class="" href="showcase.html"><span>Showcase</span></a></li>
@@ -31,12 +32,7 @@
       </nav>
     </section>
 
-    <!-- Banner -->
-    <section id="banner">
-      <div class="container">
-        <img class='image featured' src='images/hlyp9.png'>
-      </div>
-    </section>
+    <img class='image featured long' src='images/hlyp-6-7.png'>
   </div>
 
   <!-- Scripts -->
