--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 									<li><a class="a_grey" href="filmography.html"><span>Filmography</span></a></li>
 									<li><a class="a_grey" href="print.html"><span>Print</span></a></li>
 									<li><a class="a_grey" href="book.html"><span>Book</span></a></li>
-									<li><a class="a_grey" href="gallery.html"><span>Gallery</span></a></li>
+									<li><a class="a_grey" href="database.html"><span>Database</span></a></li>
 								</ul>
 							</nav>
 
