--- a/filmography.html
+++ b/filmography.html
@@ -27,12 +27,12 @@
           <li><a class="" href="filmography.html"><span>Filmography</span></a></li>
           <li><a class="" href="print.html"><span>Print</span></a></li>
           <li><a class="" href="book.html"><span>Book</span></a></li>
-          <li><a class="" href="gallery.html"><span>Gallery</span></a></li>
+          <li><a class="" href="database.html"><span>Database</span></a></li>
         </ul>
       </nav>
     </section>
 
-    <img class='image featured long' src='images/hlyp-4-5.png'>
+    <img class='image featured' src='images/hlyp-4-5-vertical.png'>
   </div>
 
   <!-- Scripts -->
