--- a/database.html
+++ b/database.html
@@ -34,9 +34,9 @@
     <!-- Banner -->
     <section id="banner">
       <div class="container">
-        <img class='image featured' src='images/hlyp9-blank.png'>
+        <img class='image featured' src='images/hylp9-blank.png'>
         <a href = "https://mydramalist.com/people/43523-aya-liu">
-          <img id = 'namepic' class='image featured' src='images/hlyp9-name.png' >
+          <img id = 'namepic' class='image namepic' src='images/hylp-9-name-nb.png' >
         </a>
         
       </div>
