--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 			<!-- Banner -->
 				<section id="banner">
 					<div class="container">
-						<img class = 'image featured' src = 'images/hlyp1.png'>
+						<img class = 'image featured' src = 'images/hylp1.png'>
 					</div>
 				</section>
 		</div>
