--- a/book.html
+++ b/book.html
@@ -34,7 +34,7 @@
     <!-- Banner -->
     <section id="banner">
       <div class="container">
-        <img class='image featured' src='images/hlyp8.png'>
+        <img class='image featured' src='images/hylp8.png'>
       </div>
     </section>
   </div>
