--- a/filmography.html
+++ b/filmography.html
@@ -32,7 +32,12 @@
       </nav>
     </section>
 
-    <img class='image featured' src='images/hlyp-4-5-vertical.png'>
+    <!-- <img class='image featured' src='images/hylp-4-5-vertical.png'> -->
+    <picture>
+      <source media="(min-width: 736px)" srcset="images/hylp-4-5-vertical.png" />
+      <source media="(max-width: 1000px)" srcset="images/hylp-4-5-vertical-mobile.png" />
+      <img class='image featured' src="images/hylp-4-5-vertical.png" />
+    </picture>
   </div>
 
   <!-- Scripts -->
