--- a/showcase.html
+++ b/showcase.html
@@ -36,11 +36,20 @@
     <section id="banner">
       <div class="container">
         <!-- <img class='image featured' src='images/hlyp2.png'> -->
-        <div style="position: relative; padding-top: 75%;">
+        <!-- div style="position: relative; padding-top: 75%;">
           <iframe
             src="https://customer-nt05r039r3twzzhc.cloudflarestream.com/97b052107b9177cab5775d41ceab2db0/iframe?preload=true&autoplay=true&poster=https%3A%2F%2Fcustomer-nt05r039r3twzzhc.cloudflarestream.com%2F97b052107b9177cab5775d41ceab2db0%2Fthumbnails%2Fthumbnail.jpg%3Ftime%3D%26height%3D600"
             loading="lazy" style="border: none; position: absolute; top: 0; left: 0; height: 100%; width: 100%;"
             allow="accelerometer; gyroscope; autoplay; encrypted-media; picture-in-picture;" allowfullscreen="true"></iframe>
+        </div> -->
+        <div style="position: relative; padding-top: 75%;">
+          <iframe
+            src="https://customer-nt05r039r3twzzhc.cloudflarestream.com/c37262d4069afa724f04df7fa3c838ba/iframe?poster=https%3A%2F%2Fcustomer-nt05r039r3twzzhc.cloudflarestream.com%2Fc37262d4069afa724f04df7fa3c838ba%2Fthumbnails%2Fthumbnail.jpg%3Ftime%3D%26height%3D600"
+            loading="lazy"
+            style="border: none; position: absolute; top: 0; left: 0; height: 100%; width: 100%;"
+            allow="accelerometer; gyroscope; autoplay; encrypted-media; picture-in-picture;"
+            allowfullscreen="true"
+          ></iframe>
         </div>
       </div>
     </section>
